Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2227

Thrift compiler generates spurious warnings with Xlint

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.9
    • 0.9.2
    • Java - Compiler
    • None
    • Patch Available

    Description

      Sample warnings:

      noformat
      [WARNING] /home/gaul/work/cloud/common-thrift/target/generated-sources/thrift/com/maginatics/raptor/metadata/thrift/Sid.java:[45,44] found raw type: org.apache.thrift.scheme.IScheme
      missing type arguments for generic class org.apache.thrift.scheme.IScheme<T>
      [WARNING] /home/gaul/work/cloud/common-thrift/target/generated-sources/thrift/com/maginatics/raptor/metadata/thrift/Sid.java:[45,107] found raw type: org.apache.thrift.scheme.IScheme
      missing type arguments for generic class org.apache.thrift.scheme.IScheme<T>
      [WARNING] /home/gaul/work/cloud/common-thrift/target/generated-sources/thrift/com/maginatics/raptor/metadata/thrift/Sid.java:[281,37] unchecked cast
      required: java.util.List<java.lang.Long>
      found: java.lang.Object
      [WARNING] /home/gaul/work/cloud/common-thrift/target/generated-sources/thrift/com/maginatics/raptor/metadata/thrift/Sid.java:[431,52] unchecked call to read(org.apache.thrift.protocol.TProtocol,T) as a member of the raw type org.apache.thrift.scheme.IScheme
      [WARNING] /home/gaul/work/cloud/common-thrift/target/generated-sources/thrift/com/maginatics/raptor/metadata/thrift/Sid.java:[435,53] unchecked call to write(org.apache.thrift.protocol.TProtocol,T) as a member of the raw type org.apache.thrift.scheme.IScheme
      [WARNING] /home/gaul/work/cloud/common-thrift/target/generated-sources/thrift/com/maginatics/raptor/metadata/thrift/Sid.java:[501,30] getScheme() in com.maginatics.raptor.metadata.thrift.Sid.SidStandardSchemeFactory implements <S>getScheme() in org.apache.thrift.scheme.SchemeFactory
      return type requires unchecked conversion from com.maginatics.raptor.metadata.thrift.Sid.SidStandardScheme to S
      [WARNING] /home/gaul/work/cloud/common-thrift/target/generated-sources/thrift/com/maginatics/raptor/metadata/thrift/Sid.java:[597,27] getScheme() in com.maginatics.raptor.metadata.thrift.Sid.SidTupleSchemeFactory implements <S>getScheme() in org.apache.thrift.scheme.SchemeFactory
      return type requires unchecked conversion from com.maginatics.raptor.metadata.thrift.Sid.SidTupleScheme to S
      [WARNING] /home/gaul/work/cloud/common-thrift/target/generated-sources/thrift/com/maginatics/raptor/metadata/thrift/Sid.java:[38,8] serializable class com.maginatics.raptor.metadata.thrift.Sid has no definition of serialVersionUID
      noformat

      Attachments

        1. THRIFT-2227.patch
          2 kB
          Andrew Gaul

        Activity

          People

            Unassigned Unassigned
            gaul Andrew Gaul
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: