Suppress spurious Xlint warnings (THRIFT-2227)

Reported at:

http://www.reddit.com/r/java/comments/1n12gb/how_can_i_xlint_most_of_my_code_in_a_maven/